UX-811 #comment Starrie and I resolved card resize on smaller devices

--- a/_sass/_shakespeare.scss
+++ b/_sass/_shakespeare.scss
@@ -360,14 +360,12 @@ a {
 
 // Material Design overrides
 .card {
-  height: 389px;
-//  width: 311px;
   margin-left: auto;
   margin-right: auto;
 }
 
 .card .card-content {
-  height: 160px;
+  height: 180px;
 }
 .card .card-action {
   border-top: none;
